tests/neg/namespace/main.stk
import test

def concat(a: Int, l: test.List[Int]): test.List[Int] = #Cons(a, l)

def main =
  test.triple 10    // error   // error
  test.double 10 p
